--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  /* padding: 0 calc(50% - 590px); */
 }
 
 img {
@@ -77,8 +78,6 @@ img {
 
 .logo {
   display: inline-block;
-  padding:  10px;
-  margin-left: -10px;
   color: var(--logo-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -107,9 +106,9 @@ img {
   display: flex;
   align-items: center;
 }
-
+ 
 .site-nav {
-  margin-left: calc(93px - 25px);
+  margin-left: 93px;
   margin-right: auto;
 }
 
@@ -117,27 +116,22 @@ img {
 .contacts-nav {
   display: flex;
   margin-top: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding-inline-start: 0;
 }
 
 .site-nav-item, 
 .contacts-nav-item {
   display: block;
- }
+}
 
-/* .site-nav-item:not(:last-child), 
+.site-nav-item:not(:last-child), 
 .contacts-nav-item:not(:last-child) {
   margin-right: 50px;
-} */
+}
 
 .site-nav-link {
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 32px;
-  padding-left: 25px;
-  padding-right: 25px;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -159,8 +153,6 @@ img {
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 32px;
-  padding-left: 25px;
-  padding-right: 25px;
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -187,10 +179,8 @@ img {
 .hero {
   background-color: var(--dark-bg-color);
   text-align: center;
-}
-
-.hero-box {
-  padding: 200px 252px;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -208,7 +198,6 @@ img {
 .hero-btn {
   display: inline-block;
   padding: 10px 32px;
-  margin-top: 30px;
   border-radius: 4px;
   min-width: 200px;
   
@@ -240,7 +229,7 @@ img {
 
 .section-title {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 50px;
   
   color: var(--title-text-color);
   font-weight: 700;
@@ -252,15 +241,9 @@ img {
 /* END for all Sections */
 
 /* --------------- Features */
-.features {
-  padding-bottom: 0;
-}
 
 .features-list {
   display: flex;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
   margin-left: calc(-1 * var(--item-gap));
 }
 
@@ -271,7 +254,7 @@ img {
 
 .features-title {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   
   color: var(--title-text-color);
   font-weight: 700;
@@ -281,7 +264,7 @@ img {
 }
 
 .features-text {
-  margin-top: 10px;
+  margin-top: 0;
   margin-bottom: 0;
   
   font-size: 14px;
@@ -292,12 +275,12 @@ img {
 
 /* --------------- Our Doings */
 
+.section-doing {
+  padding-top: 0;
+}
+
 .doings {
   display: flex;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-top: 50px;
   margin-left: calc(-1 * var(--item-gap));
 }
 
@@ -311,17 +294,12 @@ img {
 /* --------------- Our team */
 .team {
   margin-bottom: 0;
-  
   background-color: var(--second-bg-color);
 }
 
 .team-list {
   display: flex;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
   margin-left: calc(-1 * var(--item-gap));
-  margin-top: 50px;
 }
 
 .team-item {
@@ -330,7 +308,7 @@ img {
 }
 
 .team-content {
-  padding: 30px;
+  padding: 30px 0;
 }
 
 .team-title {
@@ -359,19 +337,13 @@ img {
 
 /* --------------- PORTFOLIO */
 
-.portfolio {
-  padding-bottom: 94px;
-  padding-top: 94px;
-}
-
 /* --------------- Filtr */
 
 .filtr {
   display: flex;
   justify-content: center;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  margin-bottom: 50px;
+ 
 }
 
 .filtr-item:not(:last-child) {
@@ -411,11 +383,8 @@ img {
 .examples {
   display: flex;
   flex-wrap: wrap;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
   margin-left: calc(-1 * var(--item-gap));
-  margin-top: calc(-1 * var(--item-gap) + 50px);
+  margin-top: calc(-1 * var(--item-gap));
 }
 
 .examples-item {
@@ -430,7 +399,7 @@ img {
 }
 
 .examples-title {
-  margin: 0;
+  margin: 0 0 4px 0;
   
   color: var(--title-text-color);
   font-weight: 700;
@@ -440,7 +409,7 @@ img {
 }
 
 .examples-type {
-  margin-top: 4px;
+  margin-top: 0;
   margin-bottom: 0;
   
   font-size: 16px;
@@ -461,21 +430,16 @@ img {
 }
 
 .address {
-  margin-top: calc (20px - 10px - 4px);
-  padding-inline-start: 0;
+  margin-top: 20px;
 }
 
 .address-item:not(:first-child) {
-  margin-top: 1px;
+  margin-top: 9px;
 }
 
 .address-map,
 .address-contact {
   display: inline-block;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-right: 4px;
-  padding-left: 4px;
 }
 
 .address-map {
